# CRISP-DM-Classification

./: 404.html  CRISP_DM_Project_Bank.ipynb  Dockerfile  README.md  crisp_dm_project_bank.py  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt
Scripts/: CRISP_DM_Project_Bank.ipynb  finapp.py  model6.pkl  my_funcs.py  training.py
Scripts/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Scripts/catboost_info/learn/: events.out.tfevents
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/: index.md
mlflow-server/mlruns/.trash/833220054597850391/: meta.yaml
mlflow-server/mlruns/0/: meta.yaml
mlflow-server/mlruns/901255489418492369/: meta.yaml
mlflow-server/mlruns/901255489418492369/1f17198b6a084e308f2c6a8b7a900acc/: meta.yaml
mlflow-server/mlruns/901255489418492369/282b5d49e18e41efb223361764f2930d/: meta.yaml
mlflow-server/mlruns/901255489418492369/72149c924060418fa79fd102d542f785/: meta.yaml
mlflow-server/mlruns/901255489418492369/8fce5adb583543bcb6bf09e141f61261/: meta.yaml
mlflow-server/mlruns/901255489418492369/90827bd127454eecb686e5b748ff59ab/: meta.yaml
mlflow-server/mlruns/901255489418492369/91ba4996aae24679b7e4da9b747ef2b7/: meta.yaml
mlflow-server/mlruns/901255489418492369/9cd51c68001c453ba3af77a0c9e7caec/: meta.yaml
mlflow-server/mlruns/901255489418492369/b4df6d927d1b470c916f914f61689bb8/: meta.yaml
search/: search_index.json
site/: 404.html  index.html
site/search/: search_index.json
(+56 files in other folders)
